refactor : 불필요한 상수 보관 클래스 제거